--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -14,8 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
     "nodemon": "^3.0.1"
-  }
+  },
+  "description": ""
 }
