--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
     "express-fileupload": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "package-lock.json": "^1.0.0",
+    "package.json": "^2.0.1"
   },
   "description": ""
 }
