--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
@@ -24,5 +24,14 @@
     "package-lock.json": "^1.0.0",
     "package.json": "^2.0.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/express-fileupload": "^1.5.1",
+    "@types/mysql": "^2.15.26",
+    "typescript": "^5.6.3"
+  }
 }
